# fireguard-group-6

./: .env.example  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: issue-title-prefix.yml  test.yml
backend/: app.py  auth.py  create_user.py  keyCloakUtils.py  main.py  mongo.py  test.py  test_locations.py  test_users.py
backend/models/: models.py
backend/routers/: firerisks.py  locations.py  users.py
backend/services/: fire_risk_service.py
dynamic_frcm/: main.py
